# rk3576_streamer

./: .gitignore  CMakeLists.txt  readme.md
include/: StreamerApp.h  audio_encoder.h  config.h.example  mpp_encoder.h  rga.h  safe_queue.h  srt_pusher.h  ts_muxer.h  v4l2.h
include/audio/: audio_capture.h
include/network/: ts_muxer.h
include/video/: mpp_encoder.h  rga.h  v4l2.h
include/yolov8/: YoloDetector.h  postprocess.h
src/: StreamerApp.cpp  audio_capture.cpp  audio_encoder.cpp  main.cpp  mpp_encoder.cpp  rga.cpp  srt_pusher.cpp  ts_muxer.cpp  v4l2.cpp
src/audio/: audio_capture.cpp  audio_encoder.cpp
src/network/: srt_pusher.cpp  ts_muxer.cpp
src/video/: mpp_encoder.cpp  rga.cpp  v4l2.cpp
src/yolov8/: YoloDetector.cpp  postprocess.cpp
